--- a/pom.xml
+++ b/pom.xml
@@ -9,57 +9,61 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        
+
         <dependency.spring.version>4.2.6.RELEASE</dependency.spring.version>
         <dependency.spring-data-jpa.version>1.10.1.RELEASE</dependency.spring-data-jpa.version>
-       
+
         <dependency.hibernate-entitymanager.version>5.1.0.Final</dependency.hibernate-entitymanager.version>
         <dependency.hibernate-validator.version>5.2.4.Final</dependency.hibernate-validator.version>
         <dependency.h2.version>1.4.191</dependency.h2.version>
-        
+
         <dependency.junit.version>4.12</dependency.junit.version>
         <dependency.logback.version>1.1.3</dependency.logback.version>
         <dependency.slf4j.version>1.7.14</dependency.slf4j.version>
-        
+
         <plugin.maven-compiler-plugin.version>3.5.1</plugin.maven-compiler-plugin.version>
         <plugin.maven-surefire-plugin.version>2.19.1</plugin.maven-surefire-plugin.version>
         <plugin.maven-failsafe-plugin.version>2.19.1</plugin.maven-failsafe-plugin.version>
     </properties>
     <dependencies>
-        
-        
-        
-        
+
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
         <!--Spring -->
-           
-            
-            <dependency>
+
+
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
-            
-            <!-- Spring data framework -->
-            <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-jpa</artifactId>
-                <version>${dependency.spring-data-jpa.version}</version>
-            </dependency>
-            
-          
-            
-            <!-- Hibernate -->
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-entitymanager</artifactId>
-                <version>${dependency.hibernate-entitymanager.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-validator</artifactId>
-                <version>${dependency.hibernate-validator.version}</version>
-            </dependency>
-            
-            <dependency>
+
+        <!-- Spring data framework -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${dependency.spring-data-jpa.version}</version>
+        </dependency>
+
+
+
+        <!-- Hibernate -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${dependency.hibernate-entitymanager.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${dependency.hibernate-validator.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
             <version>2.2.4</version>
@@ -71,16 +75,16 @@
             <version>2.2.4</version>
             <scope>provided</scope>
         </dependency>
-            
-            <!-- supported databases -->
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>${dependency.h2.version}</version>
-                <scope>compile</scope>
-            </dependency>
-        
-        
+
+        <!-- supported databases -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${dependency.h2.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+
         <!--Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -97,20 +101,20 @@
             <artifactId>slf4j-api</artifactId>
             <version>${dependency.slf4j.version}</version>
         </dependency>
-            
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jcl-over-slf4j</artifactId>
             <version>${dependency.slf4j.version}</version>
         </dependency>
-            
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <version>${dependency.slf4j.version}</version>
         </dependency>
-            
-           <dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.8</version>
@@ -129,17 +133,17 @@
             <version>1.9.5</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
         </dependency>
-        
+
     </dependencies>
-    
+
     <dependencyManagement>
         <dependencies>
-             <dependency>
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-framework-bom</artifactId>
                 <version>${dependency.spring.version}</version>
@@ -148,7 +152,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -159,18 +163,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-            </plugin>      
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-            </plugin>    
-           
-           
+            </plugin>
+
+
         </plugins>
 
         <pluginManagement>
             <plugins>
-                
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
@@ -192,7 +196,7 @@
                         <excludes>
                             <exclude>**/*IT.java</exclude>
                         </excludes>
-                        <skipTests>${skip.unit.tests}</skipTests>			
+                        <skipTests>${skip.unit.tests}</skipTests>
                     </configuration>
                 </plugin>
 
@@ -218,8 +222,8 @@
                         </execution>
                     </executions>
                 </plugin>
-                
-               
+
+
             </plugins>
         </pluginManagement>
     </build>
